# tcdo_pg_tools

./: .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-publish.yml
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/tcdo_pg_tools/: __init__.py  cli.py  coverage_calculator.py  fasta_merge.py  fusion_merge.py  merge_fasta.py  merge_pg_results.py  merge_proteome.py  philosopher.crap-gpmdb.fas
tests/: __init__.py  test_tcdo_pg_tools.py
tests/fasta_merge_test/: test.csv
tests/merge_pg_results/: test.csv
