[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tcdo_pg_tools"
version = "0.0.1"
description = "Commandline tools to support proteogenomics analyses at MSK TCDO and beyond"
readme = "README.rst"
authors = [
  {name = "Asher Preska Steinberg", email = "preskaa@mskcc.org"}
]
maintainers = [
  {name = "Asher Preska Steinberg", email = "preskaa@mskcc.org"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
license = {text = "Apache Software License 2.0"}
dependencies = [
    "pandas",
    "numpy"
]
[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/apsteinberg/tcdo_pg_tools/issues"
changelog = "https://github.com/apsteinberg/tcdo_pg_tools/blob/master/changelog.md"
homepage = "https://github.com/apsteinberg/tcdo_pg_tools"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
fusion_merge = "tcdo_pg_tools.fusion_merge:main"

