[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tcdo_pg_tools"
version = "0.0.1"
description = "Commandline tools to support proteogenomics analyses at MSK TCDO and beyond"
readme = "README.rst"
authors = [
  {name = "Asher Preska Steinberg", email = "preskaa@mskcc.org"}
]
maintainers = [
  {name = "Asher Preska Steinberg", email = "preskaa@mskcc.org"}
]
classifiers = [

]
license = { text = "Apache-2.0" }
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/apsteinberg/tcdo_pg_tools/issues"
changelog = "https://github.com/apsteinberg/tcdo_pg_tools/blob/master/changelog.md"
homepage = "https://github.com/apsteinberg/tcdo_pg_tools"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]
# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"


[project.scripts]
tcdo_pg_tools = "tcdo_pg_tools.cli:cli"

